refactor: Replace tags in HTML file according to rule Advanced level 1.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <div class="aaa">
+    <header class="aaa">
         <img src="./eisenhower-matrix.jpg">
         <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-main-page-element">
-        <p id="topSectionForAddingElementToList">
-            <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-            <input id="new-task" class="task" type="text">
-            <button>Add</button>
+    </header>
+    <main class="centered-main-page-element">
+        <div id="topSectionForAddingElementToList">
+            <h3 for="new-task">Add Item</h3>
+            <div class="task-row-wrapper">
+                <input id="new-task" class="task" type="text">
+                <button>Add</button>
+            </div>
         </div>
-        </p>
         <h3>Todo</h3>
         <ul id="incompleteTasks">
             <li>
@@ -48,7 +48,7 @@
                 <button class="delete"><img src="./remove.svg"></button>
             </li>
         </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 
